--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "Implementando o tabnews.com.br como desafio do curso.dev",
   "main": "index.js",
   "scripts": {
-    "dev": "next dev",
+    "dev": "npm run svs:up && next dev",
+    "svs:up": "docker compose -f infra/compose.yaml up -d",
+    "svs:down": "docker compose -f infra/compose.yaml down",
+    "svs:stop": "docker compose -f infra/compose.yaml stop",
     "lint:check": "prettier --check .",
     "lint:fix": "prettier --write .",
     "test": "jest",
